--- a/002.org
+++ b/002.org
@@ -558,7 +558,9 @@ Verk did a triple-take with a broad, yellow smile for the clan portraitist and a
 
 The two men had never felt this kind of intense, surreal terror before. Either their predict-thought was correct, and Verk would not /see/ what was there, or he would immediately see a fine, sparkling, extra-large false-rock-stick that would, should such a thing even exist outside of caveboy talk, be hidden carefully under feet of bat-scat in the very back of one's cave[fn:: Which would keep it quite warm, which no one found out.].
 
-Verk grunted the desperate grunt of the soon-dying and heaved the top halve upward, balancing on the bottom, thick end of the "egg". The top halve slid slightly to warn of its instability. Gog and Grav each picked up the fatter, heavier half, one on each side, and the three men walked it over to one side, setting it down on a blanket of fresh leaves. Gog could see the revealed form, while Grav was walking his share of the heavy half of the egg along, with his head turned, but both men felt the same hopeless terror combined with an oddly sweet giddiness.
+Verk grunted the desperate grunt of the soon-dying and heaved the top halve upward, balancing it on the opposite, thick end of the "egg". The top halve slid slightly to warn of its instability.
+
+Gog and Grav each picked up the fatter, heavier end, one on each side, softly grunting in sympathy. The three men walked the top halve over to one side, flipped it slowly and set its rounded, dull-gray side on a blanket of fresh leaves. Gog could see the revealed form laying in the bottom halve. Grav was walking his share along with his head turned away, but both men felt the same hopeless terror combined with an oddly sweet giddiness.
 
 "My sweet Ender-Of-Questions, in its hammock above!", Verk covered his open mouth with the fingertips of both hands in a somewhat dainty gesture, and smiled warmly. "It is /astonishing/.", stretching the syllables.
 
