--- a/002.org
+++ b/002.org
@@ -556,7 +556,7 @@ Grav and Gog stood smiling awkwardly. The crowd was too small and close for ther
 
 Verk did a triple-take with a broad, yellow smile for the clan portraitist and anyone else with a keen memory. He pried the two halves apart with a fine, glittering Sky Clam halve[fn:: These were found on the top of nearby /Mnt. Fishes/. No one knew how or why.] and a healthy-looking, tough, thick, velvety leaf which he used to protect the perimeter of the mirror-stone-like finish he had been assured he would find, among other wonders that he insisted remain a surprise.
 
-The two men had never felt this kind of intense, surreal terror before. Either their predict-thought was correct, and Verk would not /see/ what was there, or he would immediately see a fine, sparkling, extra-large false-rock-stick that would, should such a thing even exist outside of caveboy talk, be hidden carefully under feet of bat-scat in the very back of one's cave[fn:: Which would keep it quite warm, which no one found out.].
+The two men had never felt this kind of intense, surreal terror before. Either their predict-thought was correct, and Verk would not /see/ what was there, or he would immediately see a fine, sparkling, extra-large false-rock-stick that would, should such a thing even exist outside of caveboy talk, be hidden carefully under feet of bat-scat in the very back of one's cave[fn:: Which kept it quite warm.].
 
 Verk grunted the desperate grunt of the soon-dying and heaved the top halve upward, balancing it on the opposite, thick end of the "egg". The top halve slid slightly to warn of its instability.
 
