--- a/002.org
+++ b/002.org
@@ -564,7 +564,7 @@ Gog and Grav each picked up the fatter, heavier end, one on each side, softly gr
 
 "My sweet Ender-Of-Questions, in its hammock above!", Verk covered his open mouth with the fingertips of both hands in a somewhat dainty gesture, and smiled warmly. "It is /astonishing/.", stretching the syllables.
 
-The men watched Verk shake his head slowly as they wondered which way this was going.
+The men watched Verk shake his head slowly[fn:: Again, more 'bobbed'.] as they wondered which way this was going.
 
 "It's /beautiful/!", Verk paced slowly in a semi-circle as the small crowed, also gazing and cooing, made room for him.
 
