--- a/002.org
+++ b/002.org
@@ -570,7 +570,7 @@ The men watched Verk shake his head slowly[fn:: Again, more 'bobbed'.] as they w
 
 Verk lifted the smooth, clean, glittering brown crystal from its perfect den and held it up with wonder, letting the soft orange of the late afternoon sun coming from the nearby cave opening reveal all of the object's beautiful, strictly bilateral symmetry with the contrasting powers of well-oriented, bright sun.
 
-"It looks like /something/...", wondered Verk aloud. "It cannot be other than a message. To comprehend what Ender's-Nature-Force[fn:: Roughly, 'fate'.] has revealed to us is of the utmost importance. It is a message to us, to the Crec, straight from Its mouth[fn:: "God" was a more abstract being to the Crec than ours is to modern people. Referring to their 'god' as 'it' is in no way a kind of sacrilege. It is the pronoun to be used. For, Kug, Great Diviner of Recent Messages said in his youth, 'The Crec God has no rock-stick!'. In other words Ender-of-Questions was genderless and what is more, not thought of as 'caveperson-like' in the least. They would find the idea so humorous that, should you some day be able to inquire about theirs, offering a description of your god's nature, a revealing conversation would likely not be possible. Ender-Of-Questions /does/ have a mouth, though.]."
+"It looks like /something/...", wondered Verk aloud. "It cannot be other than a message. To comprehend what Ender's-Nature-Force[fn:: Roughly, 'fate'.] has revealed to us is of the utmost importance. It is a message to us, to the Crec, straight from Its Mouth[fn:: "God" was a more abstract being to the Crec than ours is to modern people. Referring to their 'god' as 'it' is in no way a kind of sacrilege. It is the pronoun to be used. For, Kug, Great Diviner of Recent Messages said in his youth, 'The Crec God has no rock-stick!'. In other words Ender-of-Questions was genderless and what is more, not thought of as 'caveperson-like' in the least. They would find the idea so humorous that, should you some day be able to inquire about theirs, offering a description of your god's nature, a revealing conversation would likely not be possible. Ender-Of-Questions /does/ have a mouth, though.]."
 
 "Indeed Grav and I thought the same thing.", offered Gog.
 
