--- a/002.org
+++ b/002.org
@@ -576,7 +576,7 @@ Verk lifted the smooth, clean, glittering brown crystal from its perfect den and
 
 Verk turned to Gog, "Young buck you may be wise yet.", and smiled with a wink. This was a cue for all present to appreciate Verk's dry wit, which they did with apparent sincerity.
 
-"Let us pass it around the room! Us Under-Men[fn:: An near analog of the modern Japanese 'kouhai', one's social inferior in some given context, in this particular case the speaker was thinking in terms of their shared military experience and shared love of knowledge.] are thirsting of curiosity."
+"Let us pass it around the room! Us Under-Men[fn:: An near analog of the modern Japanese 'kouhai', one's social inferior in some given context, in this particular case the speaker was thinking in terms of their shared military experience and shared love of knowledge.] are thirsting of curiosity.", an anonymous voice said.
 
 The small crowd of men in the large burrow took turns handling, admiring, indeed caressing the object. There was many quizzical raised eyebrows[fn:: Being mostly 'biological hardware' in origin, this gesture means the same to pretty much all of humanity and their cousins.], asking 'What can we learn from this?'
 
