--- a/002.org
+++ b/002.org
@@ -586,13 +586,13 @@ Some of the men, while holding it, managed to quickly have something to say to t
 
 "I have seen weapons much like this!"
 
-"Are these not gills, Kvred? Could it be a fish? For it has a kind of small mouth. I have seen a kind of dart-fish that has pronounced dorsal muscles producing in a similar, long, thin snake-meal along the bottom-center.", at which Kvred looked nonplussed, as if to say 'why are you asking me?'.
+Kin, a caveman that the Crec would say is /Married To The Forest/ said, "Are these not gills, Kvred? Could it be a fish? For it has a kind of small mouth. I have seen a kind of dart-fish that has pronounced dorsal muscles producing a thick, vein-like structure along the bottom, here.", at which Kvred looked nonplussed, as if to say 'why are you asking me?'.
 
-This contributor, smiling and not looking at the crystal, ran his fingers "down" the "bottom" of the object; some others noticing his unkempt fingernail as it glided slowly along the crystal's surface to point out this structure.
+This contributor, smiling and not looking at the crystal, ran his fingers "down" the "bottom" of the object; some others noticing his unkempt fingernail as it glided slowly along the crystal's surface to point out this feature.
 
 "Does it not look incomplete to anyone else?"
 
-"Things in Nature do not have abrupt, sharp ends like we see here." (pointing) "Unless it is cleanly cut by a blade, like the fallen arm stumps we may see in glorious battle."
+"Things in Nature do not have abrupt, sharp ends like we see here." (pointing) "Unless it is cleanly cut by a blade, like the discarded arms we see when battle turns justly."
 
 The group of men mostly looked at the floor and seemed to be pondering this remark further.
 
