--- a/002.org
+++ b/002.org
@@ -600,9 +600,9 @@ At all this, the amount of apparent blindness to the obvious may be striking to 
 
 "Father-Brother Verk, what shall we do with it?", asked one of Verk's Under-Men.
 
-"As a gift to one of the Elder-Quorum's finer charities, it will of course make its way eventually to the Hard-Guard-Cave, but tonight it goes home with me, so I may ender-talk with The Ender and try in my humility to divine his message. Made-Baby-Wife-of-Verk[fn:: See Appendix: 'Language and Naming Surrounding Women'.] and I will ensure it encounters no ill abuse."
+"As a gift to one of the Elder-Quorum's finer charities, it will of course make its way eventually to the Hard-Guard-Cave, but tonight it goes home with me, so I may talk with The-Ender and try in my humility to divine his message. Made-Boy-Wife-of-Verk[fn:: See Appendix: 'Language and Naming Surrounding Women'.] and I will ensure it encounters no ill treatment."
 
-"Very good, Father-Brother Verk! Gog and I will package it in the manor in which we did for its movement from the mine. We encountered problems with our first attempt. It seems to have some tricks up its sleeve[fn:: Not having shirt sleeves, the Crec actually use a very similar expression that roughly means, 'magic in my garments'.]."
+"Very good, Father-Brother Verk! Gog and I will package it in the manor in which we did for its movement from the mine. We encountered problems with our first attempt. It seems to have some tricks up its sleeve[fn:: Not having shirt sleeves, the Crec actually use a similar expression that roughly means, 'magic in its garments'.]."
 
 "You are a fine help.", said Verk, his face expressionless.
 
