--- a/002.org
+++ b/002.org
@@ -606,7 +606,7 @@ At all this, the amount of apparent blindness to the obvious may be striking to 
 
 "You are a fine help.", said Verk, his face expressionless.
 
-The two men, having most materials already handy, re-secured the egg and its yolk, hanging it from the same well-suited springy tree branch. Hoisting the xxxx over to two of Verk's Under-Men's shoulders, who watching Verk's retreat towards the exit, hastily set off in a trot towards xxxx verk's own local hill xxx passing Verk as stopped and turned at the exit.
+The two men, having most materials already handy, re-secured the egg and its yolk, hanging it from the same well-suited springy aspen sapling. Hoisting the burden over to two of Verk's Under-Men's shoulders who, watching Verk's retreat towards the exit, set off in a trot towards the nearby guest hill[fn:: Kuh' Sitah] Verk occupied, passing Verk as he stopped and turned at the exit.
 
 "Oh, boys.", Verk said with one foot still pointed at the cave's exit way. "See you at club-drill day after tomorrow?" He smiled, showing apparent warmth, placing his hand over the springy mat of white hair over his heart, and pausing for an answer.
 
