--- a/002.org
+++ b/002.org
@@ -614,7 +614,7 @@ The two men, having most materials already handy, re-secured the egg and its yol
 
 The two men saluted by grabbing their left ankle with their right hand, locking their right knee, straightening and looking straight ahead at infinity with their shoulders square. "With the mind of a rutting ambling-feast, in a great blizzard, our Upper-Brother leader Father-Brother Verk! We will be there!"
 
-Gog said this alone as Grav did his best to make broad, sincere eyes. The men had not yet mastered speaking-as-one-in-battle[fn:: The meaning is obvious if you think in terms of the need for soldiers to not only act as one, but to literally think as one. This is a resource that modern humans are almost entirely without. A fierce sense of personal sovereignty that exists, even in remote, simpler communities of any left-over bit of 'primitive' culture still present in our world, in all modern humans has been a kind of wrench in the works of humanity, but also a great blessing. Humanity took a kind of fork in the cultural progression road, some time long ago. With practice the Crec, any Crec and most tribes known by them at the time could, when under extreme duress where lives or maybe whole cultures are at stake, literally respond as one to their superiors, so thorough was military training. One helpful factor, in your defense is that battle lacks a lot of nuance and the overall tasks are few.], which is a practice solders of at least mid-rank were expected to do.
+Gog said this alone as Grav did his best to make broad, sincere eyes. The men had not yet mastered speaking-as-one-in-battle[fn:: The meaning is obvious if you think in terms of the need for soldiers to not only act as one, but to literally think as one. This is a resource that modern humans are almost entirely without. A fierce sense of personal sovereignty that exists, even in remote, simpler communities of any left-over bit of 'primitive' culture still present in our world, in all modern humans has been a kind of wrench in the works of humanity, but also a great blessing. Humanity took a kind of fork in the cultural progression road, some time long ago. With practice the Crec, any Crec and most tribes known by them at the time could, when under extreme duress where lives or maybe whole cultures are at stake, literally respond as one to their superiors, so thorough was military training. One helpful factor, in your defense is that battle lacks a lot of nuance and the overall tasks are few.], which is a practice solders of at least mid-rank were expected to do spontaniously, at times that to Grav seemed to have no pattern.
 
 Verk squinted and stepped out into the pink late afternoon.
 
