--- a/002.org
+++ b/002.org
@@ -618,4 +618,4 @@ Gog said this alone as Grav did his best to make broad, sincere eyes. The men ha
 
 Verk squinted and stepped out into the pink late afternoon.
 
-"Farewell for now, boys!" Verk strutted out of the cage with that energetic "walking uphill" look, with exaggerated arm swings, that unmentionably fat cavemen have.
+"Farewell for now, boys!" Verk strutted out of the cave with that energetic "walking uphill" look, with exaggerated arm swings, that unmentionably fat cavemen have.
