--- a/002.org
+++ b/002.org
@@ -619,4 +619,4 @@ Gog said this alone as Grav did his best to make broad, sincere eyes. The men ha
 Verk squinted and stepped out into the pink late afternoon.
 
 
-"Farewell for now, boys!" Verk strutted out of the cave with, as Grav thought /that energetic/ walking uphill /look, that unmentionably fat cavemen have./
+"Farewell for now, boys!" Verk strutted out of the cave with, as Grav observed, /that energetic/ walking uphill /look, that unmentionably fat cavemen have./
